--- a/Bing_Images_Downloader.ipynb
+++ b/Bing_Images_Downloader.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d235f70",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8f6e2c68",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "448b53c2",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6cb2c989",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "63e0bf0d",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8d730f50",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ee685649",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bcc377e6",
    "metadata": {},
    "outputs": [],
@@ -203,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "778ac6c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def redirect_to_image(image_id):\n",
+    "def redirect_to_image(image_id, image_page_url):\n",
     "\n",
     "    try:\n",
-    "        image_page_url = 'https://windows10spotlight.com/images/' + str(image_id)\n",
+    "        #image_page_url = 'https://windows10spotlight.com/images/' + str(image_id)\n",
     "\n",
     "        image_page_url_data = requests.get(image_page_url).text\n",
     "        \n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3e8529a9",
    "metadata": {},
    "outputs": [],
@@ -272,9 +272,10 @@
     "    for link in page_content_soup.find_all('h2'):\n",
     "        if(link.parent.name == 'article'):\n",
     "            img_id = link.text\n",
+    "            img_link = link.find('a').get('href')\n",
     "\n",
     "            if(img_id not in bing_df['ImageID'].values):\n",
-    "                redirect_to_image(img_id)\n"
+    "                redirect_to_image(img_id, img_link)\n"
    ]
   },
   {
